--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
 <body>
   <nav>
     <ul>
-      <li><a>One</a></li>
+      <li ui-sref="parent"><a>Parent</a></li>
       <li><a>Two</a></li>
       <li><a>Three</a></li>
     </ul>
   </nav>
 
+  <h1>Multi-View Target Practice</h1>
+  <span ui-view="main-header"></span>
+
+  <h2>Parent</h2>
+  <div ui-view></div>
+  <div ui-view="named-parent"></div>
 
 
 <script src="js/app.js"></script>
