Add child state

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav>
     <ul>
       <li ui-sref="parent"><a>Parent</a></li>
-      <li><a>Two</a></li>
+      <li ui-sref="parent.child"><a>Child</a></li>
       <li><a>Three</a></li>
     </ul>
   </nav>
